--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "doctrine/annotations": "^1.12",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
@@ -16,6 +17,7 @@
     "symfony/yaml": "5.2.*"
   },
   "require-dev": {
+    "symfony/maker-bundle": "^1.30"
   },
   "config": {
     "optimize-autoloader": true,
