--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,16 @@
     "php": "^7.4",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "ext-json": "*",
+    "ext-openssl": "*",
     "doctrine/annotations": "^1.12",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
+    "symfony/serializer": "5.2.*",
+    "symfony/property-info": "5.2.*",
+    "symfony/property-access": "5.2.*",
     "symfony/yaml": "5.2.*"
   },
 
@@ -22,6 +27,7 @@
     "phpunit/phpunit": "9.3",
     "symfony/browser-kit": "5.2.*",
     "symfony/maker-bundle": "^1.30",
+    "symfony/http-client": "5.1.*",
     "symfony/phpunit-bridge": "^5.1"
   },
 
