--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,7 @@
 parameters:
     locale: en
     date_format: '%env(DATE_FORMAT)%'
+    month_date_format: '%env(MONTH_DATE_FORMAT)%'
     serialize_date_format: '%env(SERIALIZE_DATE_FORMAT)%'
     regex_date: '%env(REGEX_DATE)%'
     regex_month_date: '%env(REGEX_MONTH_DATE)%'
@@ -11,6 +12,7 @@ services:
         autoconfigure: true
         bind:
             $dateFormat: '%date_format%'
+            $monthDateFormat: '%month_date_format%'
             $serializeDateFormat: '%serialize_date_format%'
             $regexDate: '%regex_date%'
             $regexMonthDate: '%regex_month_date%'
@@ -26,3 +28,7 @@ services:
     App\Controller\:
         resource: '../src/Controller/'
         tags: [ 'controller.service_arguments' ]
+
+    App\EventListener\ExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
