--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=dev
 APP_SECRET=01e9c088489348c5896356d6aedc3636
 ###< symfony/framework-bundle ###
 
+SITE_BASE_URL=https://127.0.0.1:8000/
+
 DATE_FORMAT=d-m-Y
 MONTH_DATE_FORMAT=m-Y
 SERIALIZE_DATE_FORMAT=Y-m-d
