Add nelmio cors

--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@ REGEX_MONTH_DATE=/^(0[1-9]|1[0-2])-(19[7-9]\d|2\d{3})$/
 ENCRYPT_ALGORITHM=aes-128-cbc
 ENCRYPT_KEY=ab12vfsc521*zx
 ENCRYPT_INIT_VECTOR=1234567812345678
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
