--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
     "ext-json": "*",
     "ext-openssl": "*",
     "doctrine/annotations": "^1.12",
+    "nelmio/cors-bundle": "^2.1",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
-    "symfony/serializer": "5.2.*",
-    "symfony/property-info": "5.2.*",
     "symfony/property-access": "5.2.*",
+    "symfony/property-info": "5.2.*",
+    "symfony/serializer": "5.2.*",
     "symfony/yaml": "5.2.*"
   },
 
